// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`notificationList matches snapshot where there are no notifications 1`] = `
<Fragment>
  <StyledCommandBarBase
    items={
      [
        {
          "ariaLabel": "header.notifications.dismiss",
          "disabled": true,
          "iconProps": {
            "iconName": "Cancel",
          },
          "key": "back",
          "onClick": [Function],
          "text": "header.notifications.dismiss",
        },
      ]
    }
  />
  <div>
    <div
      className="notification-list-entry"
    >
      header.notifications.panel.noNotifications
    </div>
  </div>
</Fragment>
`;

exports[`notificationList matches snapshot where there is no notifications 1`] = `
<Fragment>
  <StyledCommandBarBase
    items={
      [
        {
          "ariaLabel": "header.notifications.dismiss",
          "disabled": false,
          "iconProps": {
            "iconName": "Cancel",
          },
          "key": "back",
          "onClick": [Function],
          "text": "header.notifications.dismiss",
        },
      ]
    }
  />
  <div>
    <div
      key="0"
    >
      <NotificationListEntry
        notification={
          {
            "text": {
              "translationKey": "test",
            },
            "type": 2,
          }
        }
        showAnnouncement={false}
      />
    </div>
  </div>
</Fragment>
`;
